RQLJS/src/rql/RqlParser.js
// Generated from RqlParser.g4 by ANTLR 4.9.2
// jshint ignore: start
import antlr4 from 'antlr4';
import RqlParserListener from './RqlParserListener.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.PredictionContextCache();

export default class RqlParser extends antlr4.Parser {

    static grammarFileName = "RqlParser.g4";
    static literalNames = [ null, "'}'", "')'", "']'", "','", "'.'", "'\"'", 
                            null, null, "'{'", "'('", "'['", "'/'", "':'", 
                            "';'", null, "'+'", "'-'", "'@'", "'#'", "'$'", 
                            "'%'", "'^'", "'&'", "'*'", "'?'", "'!'", null, 
                            "'@all_docs'", null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, "'declare function'" ];
    static symbolicNames = [ null, "CL_CUR", "CL_PAR", "CL_Q", "COMMA", 
                             "DOT", "D_QUOTE", "EQUAL", "MATH", "OP_CUR", 
                             "OP_PAR", "OP_Q", "SLASH", "COLON", "SEMICOLON", 
                             "BACKSLASH", "PLUS", "MINUS", "AT", "HASH", 
                             "DOL", "PERCENT", "POWER", "AMP", "STAR", "QUESTION_MARK", 
                             "EXCLAMATION", "ALL", "ALL_DOCS", "ALPHANUMERIC", 
                             "AND", "AS", "BETWEEN", "DECLARE", "DISTINCT", 
                             "DOUBLE", "ENDS_WITH", "STARTS_WITH", "FALSE", 
                             "FACET", "FROM", "GROUP_BY", "IN", "INCLUDE", 
                             "INDEX", "INTERSECT", "LOAD", "LONG", "MATCH", 
                             "MORELIKETHIS", "NOT", "NULL", "OR", "ORDER_BY", 
                             "SELECT", "SORTING", "STRING_W", "TRUE", "WHERE", 
                             "WITH", "EXACT", "BOOST", "JS_FUNCTION_DECLARATION", 
                             "NUM", "STRING", "WORD", "WS" ];
    static ruleNames = [ "prog", "fromStatement", "indexName", "loadStatement", 
                         "selectStatement", "jsFunction", "jsCode", "alias", 
                         "variable", "custom_function", "whereStatement", 
                         "groupByStatement", "orderByStatement", "orderBySorting", 
                         "expr", "specialFunctions", "specialParam", "parameterWithOptionalAlias", 
                         "parameter", "collectionName", "includeStatement", 
                         "fromAlias" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = RqlParser.ruleNames;
        this.literalNames = RqlParser.literalNames;
        this.symbolicNames = RqlParser.symbolicNames;
    }

    get atn() {
        return atn;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 14:
    	    		return this.expr_sempred(localctx, predIndex);
    	case 16:
    	    		return this.specialParam_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    expr_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 11);
    		case 1:
    			return this.precpred(this._ctx, 10);
    		case 2:
    			return this.precpred(this._ctx, 9);
    		case 3:
    			return this.precpred(this._ctx, 8);
    		case 4:
    			return this.precpred(this._ctx, 7);
    		case 5:
    			return this.precpred(this._ctx, 6);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    specialParam_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 6:
    			return this.precpred(this._ctx, 10);
    		case 7:
    			return this.precpred(this._ctx, 8);
    		case 8:
    			return this.precpred(this._ctx, 7);
    		case 9:
    			return this.precpred(this._ctx, 6);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	prog() {
	    let localctx = new ProgContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, RqlParser.RULE_prog);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 47;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===RqlParser.JS_FUNCTION_DECLARATION) {
	            this.state = 44;
	            this.jsFunction();
	            this.state = 49;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 50;
	        this.fromStatement();
	        this.state = 52;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===RqlParser.LOAD) {
	            this.state = 51;
	            this.loadStatement();
	        }

	        this.state = 55;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===RqlParser.WHERE) {
	            this.state = 54;
	            this.whereStatement();
	        }

	        this.state = 58;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===RqlParser.GROUP_BY) {
	            this.state = 57;
	            this.groupByStatement();
	        }

	        this.state = 61;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===RqlParser.ORDER_BY) {
	            this.state = 60;
	            this.orderByStatement();
	        }

	        this.state = 64;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===RqlParser.INCLUDE) {
	            this.state = 63;
	            this.includeStatement();
	        }

	        this.state = 67;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===RqlParser.SELECT) {
	            this.state = 66;
	            this.selectStatement();
	        }

	        this.state = 69;
	        this.match(RqlParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	fromStatement() {
	    let localctx = new FromStatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, RqlParser.RULE_fromStatement);
	    var _la = 0; // Token type
	    try {
	        this.state = 84;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,9,this._ctx);
	        switch(la_) {
	        case 1:
	            localctx = new CollectionByNameContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 71;
	            this.match(RqlParser.FROM);
	            this.state = 72;
	            this.collectionName();
	            this.state = 74;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===RqlParser.AS || _la===RqlParser.WORD) {
	                this.state = 73;
	                this.fromAlias();
	            }

	            break;

	        case 2:
	            localctx = new CollectionByIndexContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 76;
	            this.match(RqlParser.FROM);
	            this.state = 77;
	            this.match(RqlParser.INDEX);
	            this.state = 78;
	            this.indexName();
	            this.state = 80;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===RqlParser.AS || _la===RqlParser.WORD) {
	                this.state = 79;
	                this.fromAlias();
	            }

	            break;

	        case 3:
	            localctx = new AllCollectionsContext(this, localctx);
	            this.enterOuterAlt(localctx, 3);
	            this.state = 82;
	            this.match(RqlParser.FROM);
	            this.state = 83;
	            this.match(RqlParser.ALL_DOCS);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	indexName() {
	    let localctx = new IndexNameContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, RqlParser.RULE_indexName);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 86;
	        this.match(RqlParser.STRING);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	loadStatement() {
	    let localctx = new LoadStatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, RqlParser.RULE_loadStatement);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 88;
	        this.match(RqlParser.LOAD);
	        this.state = 89;
	        this.variable();
	        this.state = 90;
	        this.alias();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	selectStatement() {
	    let localctx = new SelectStatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, RqlParser.RULE_selectStatement);
	    var _la = 0; // Token type
	    try {
	        this.state = 112;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,14,this._ctx);
	        switch(la_) {
	        case 1:
	            localctx = new ProjectIndividualFieldsContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 92;
	            this.match(RqlParser.SELECT);
	            this.state = 94;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===RqlParser.DISTINCT) {
	                this.state = 93;
	                this.match(RqlParser.DISTINCT);
	            }

	            this.state = 98;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case RqlParser.WORD:
	                this.state = 96;
	                this.parameterWithOptionalAlias();
	                break;
	            case RqlParser.ENDS_WITH:
	            case RqlParser.STARTS_WITH:
	            case RqlParser.FACET:
	            case RqlParser.INTERSECT:
	            case RqlParser.MORELIKETHIS:
	            case RqlParser.EXACT:
	            case RqlParser.BOOST:
	                this.state = 97;
	                this.specialFunctions();
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            this.state = 107;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===RqlParser.COMMA) {
	                this.state = 100;
	                this.match(RqlParser.COMMA);

	                this.state = 103;
	                this._errHandler.sync(this);
	                switch(this._input.LA(1)) {
	                case RqlParser.WORD:
	                    this.state = 101;
	                    this.parameterWithOptionalAlias();
	                    break;
	                case RqlParser.ENDS_WITH:
	                case RqlParser.STARTS_WITH:
	                case RqlParser.FACET:
	                case RqlParser.INTERSECT:
	                case RqlParser.MORELIKETHIS:
	                case RqlParser.EXACT:
	                case RqlParser.BOOST:
	                    this.state = 102;
	                    this.specialFunctions();
	                    break;
	                default:
	                    throw new antlr4.error.NoViableAltException(this);
	                }
	                this.state = 109;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            break;

	        case 2:
	            localctx = new JavascriptCodeContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 110;
	            this.match(RqlParser.SELECT);
	            this.state = 111;
	            this.jsCode();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	jsFunction() {
	    let localctx = new JsFunctionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, RqlParser.RULE_jsFunction);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 114;
	        this.match(RqlParser.JS_FUNCTION_DECLARATION);
	        this.state = 115;
	        this.match(RqlParser.WORD);
	        this.state = 116;
	        this.match(RqlParser.OP_PAR);
	        this.state = 117;
	        this.match(RqlParser.WORD);
	        this.state = 122;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===RqlParser.COMMA) {
	            this.state = 118;
	            this.match(RqlParser.COMMA);
	            this.state = 119;
	            this.match(RqlParser.WORD);
	            this.state = 124;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 125;
	        this.match(RqlParser.CL_PAR);
	        this.state = 127;
	        this.jsCode();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	jsCode() {
	    let localctx = new JsCodeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, RqlParser.RULE_jsCode);
	    try {
	        this.state = 139;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,17,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 129;
	            this.match(RqlParser.OP_CUR);
	            this.state = 130;
	            this.jsCode();
	            this.state = 131;
	            this.match(RqlParser.CL_CUR);
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 136;
	            this._errHandler.sync(this);
	            var _alt = this._interp.adaptivePredict(this._input,16,this._ctx)
	            while(_alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                if(_alt===1+1) {
	                    this.state = 133;
	                    this.matchWildcard(); 
	                }
	                this.state = 138;
	                this._errHandler.sync(this);
	                _alt = this._interp.adaptivePredict(this._input,16,this._ctx);
	            }

	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	alias() {
	    let localctx = new AliasContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, RqlParser.RULE_alias);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 141;
	        this.match(RqlParser.AS);
	        this.state = 142;
	        this.match(RqlParser.WORD);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	variable() {
	    let localctx = new VariableContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, RqlParser.RULE_variable);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 150;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,19,this._ctx);
	        if(la_===1) {
	            this.state = 144;
	            this.match(RqlParser.WORD);
	            this.state = 147;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===RqlParser.OP_Q) {
	                this.state = 145;
	                this.match(RqlParser.OP_Q);
	                this.state = 146;
	                this.match(RqlParser.CL_Q);
	            }

	            this.state = 149;
	            this.match(RqlParser.DOT);

	        }
	        this.state = 152;
	        this.match(RqlParser.WORD);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	custom_function() {
	    let localctx = new Custom_functionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, RqlParser.RULE_custom_function);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 154;
	        this.variable();
	        this.state = 155;
	        this.match(RqlParser.OP_PAR);
	        this.state = 182;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(((((_la - 63)) & ~0x1f) == 0 && ((1 << (_la - 63)) & ((1 << (RqlParser.NUM - 63)) | (1 << (RqlParser.STRING - 63)) | (1 << (RqlParser.WORD - 63)))) !== 0)) {
	            this.state = 164;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,21,this._ctx);
	            switch(la_) {
	            case 1:
	                this.state = 156;
	                this.custom_function();
	                break;

	            case 2:
	                this.state = 157;
	                this.variable();
	                break;

	            case 3:
	                this.state = 159; 
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	                do {
	                    this.state = 158;
	                    this.match(RqlParser.STRING);
	                    this.state = 161; 
	                    this._errHandler.sync(this);
	                    _la = this._input.LA(1);
	                } while(_la===RqlParser.STRING);
	                break;

	            case 4:
	                this.state = 163;
	                this.match(RqlParser.NUM);
	                break;

	            }
	            this.state = 179;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===RqlParser.COMMA) {
	                this.state = 166;
	                this.match(RqlParser.COMMA);
	                this.state = 175;
	                this._errHandler.sync(this);
	                var la_ = this._interp.adaptivePredict(this._input,23,this._ctx);
	                switch(la_) {
	                case 1:
	                    this.state = 167;
	                    this.custom_function();
	                    break;

	                case 2:
	                    this.state = 168;
	                    this.variable();
	                    break;

	                case 3:
	                    this.state = 170; 
	                    this._errHandler.sync(this);
	                    _la = this._input.LA(1);
	                    do {
	                        this.state = 169;
	                        this.match(RqlParser.STRING);
	                        this.state = 172; 
	                        this._errHandler.sync(this);
	                        _la = this._input.LA(1);
	                    } while(_la===RqlParser.STRING);
	                    break;

	                case 4:
	                    this.state = 174;
	                    this.match(RqlParser.NUM);
	                    break;

	                }
	                this.state = 181;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	        }

	        this.state = 184;
	        this.match(RqlParser.CL_PAR);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	whereStatement() {
	    let localctx = new WhereStatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, RqlParser.RULE_whereStatement);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 186;
	        this.match(RqlParser.WHERE);
	        this.state = 187;
	        this.expr(0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	groupByStatement() {
	    let localctx = new GroupByStatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, RqlParser.RULE_groupByStatement);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 189;
	        this.match(RqlParser.GROUP_BY);

	        this.state = 190;
	        this.parameterWithOptionalAlias();
	        this.state = 195;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===RqlParser.COMMA) {
	            this.state = 191;
	            this.match(RqlParser.COMMA);

	            this.state = 192;
	            this.parameterWithOptionalAlias();
	            this.state = 197;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	orderByStatement() {
	    let localctx = new OrderByStatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, RqlParser.RULE_orderByStatement);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 198;
	        this.match(RqlParser.ORDER_BY);

	        this.state = 199;
	        this.parameterWithOptionalAlias();
	        this.state = 204;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===RqlParser.COMMA) {
	            this.state = 200;
	            this.match(RqlParser.COMMA);

	            this.state = 201;
	            this.parameterWithOptionalAlias();
	            this.state = 206;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 208;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===RqlParser.AS) {
	            this.state = 207;
	            this.orderBySorting();
	        }

	        this.state = 211;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===RqlParser.SORTING) {
	            this.state = 210;
	            this.match(RqlParser.SORTING);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	orderBySorting() {
	    let localctx = new OrderBySortingContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, RqlParser.RULE_orderBySorting);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 213;
	        this.match(RqlParser.AS);
	        this.state = 214;
	        _la = this._input.LA(1);
	        if(!(((((_la - 29)) & ~0x1f) == 0 && ((1 << (_la - 29)) & ((1 << (RqlParser.ALPHANUMERIC - 29)) | (1 << (RqlParser.DOUBLE - 29)) | (1 << (RqlParser.LONG - 29)) | (1 << (RqlParser.STRING_W - 29)))) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


	expr(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new ExprContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 28;
	    this.enterRecursionRule(localctx, 28, RqlParser.RULE_expr, _p);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 237;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,33,this._ctx);
	        switch(la_) {
	        case 1:
	            localctx = new SpecialFunctionExprContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;

	            this.state = 217;
	            this.specialFunctions();
	            break;

	        case 2:
	            localctx = new ParentissExprContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 218;
	            this.match(RqlParser.OP_PAR);
	            this.state = 219;
	            this.expr(0);
	            this.state = 220;
	            this.match(RqlParser.CL_PAR);
	            break;

	        case 3:
	            localctx = new WordValueExprContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 223;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===RqlParser.COMMA) {
	                this.state = 222;
	                this.match(RqlParser.COMMA);
	            }

	            this.state = 226; 
	            this._errHandler.sync(this);
	            var _alt = 1;
	            do {
	            	switch (_alt) {
	            	case 1:
	            		this.state = 225;
	            		this.match(RqlParser.STRING);
	            		break;
	            	default:
	            		throw new antlr4.error.NoViableAltException(this);
	            	}
	            	this.state = 228; 
	            	this._errHandler.sync(this);
	            	_alt = this._interp.adaptivePredict(this._input,31, this._ctx);
	            } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	            this.state = 231;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,32,this._ctx);
	            if(la_===1) {
	                this.state = 230;
	                this.expr(0);

	            }
	            break;

	        case 4:
	            localctx = new NumExprContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 233;
	            this.match(RqlParser.NUM);
	            break;

	        case 5:
	            localctx = new BooleanExprContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 234;
	            _la = this._input.LA(1);
	            if(!(_la===RqlParser.FALSE || _la===RqlParser.TRUE)) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            break;

	        case 6:
	            localctx = new FunctionExprContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 235;
	            this.custom_function();
	            break;

	        case 7:
	            localctx = new VariableExprContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 236;
	            this.variable();
	            break;

	        }
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 271;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,38,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                this.state = 269;
	                this._errHandler.sync(this);
	                var la_ = this._interp.adaptivePredict(this._input,37,this._ctx);
	                switch(la_) {
	                case 1:
	                    localctx = new EqualExprContext(this, new ExprContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, RqlParser.RULE_expr);
	                    this.state = 239;
	                    if (!( this.precpred(this._ctx, 11))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 11)");
	                    }
	                    this.state = 240;
	                    this.match(RqlParser.EQUAL);
	                    this.state = 241;
	                    this.expr(12);
	                    break;

	                case 2:
	                    localctx = new MathOperatorExprContext(this, new ExprContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, RqlParser.RULE_expr);
	                    this.state = 242;
	                    if (!( this.precpred(this._ctx, 10))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 10)");
	                    }
	                    this.state = 243;
	                    this.match(RqlParser.MATH);
	                    this.state = 244;
	                    this.expr(11);
	                    break;

	                case 3:
	                    localctx = new BetweenExprContext(this, new ExprContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, RqlParser.RULE_expr);
	                    this.state = 245;
	                    if (!( this.precpred(this._ctx, 9))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 9)");
	                    }
	                    this.state = 246;
	                    this.match(RqlParser.BETWEEN);
	                    this.state = 247;
	                    this.expr(0);
	                    this.state = 248;
	                    this.match(RqlParser.AND);
	                    this.state = 249;
	                    this.expr(10);
	                    break;
